màn hình thời khóa biểu

--- a/MyAssignment/web/index.html
+++ b/MyAssignment/web/index.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Test</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -13,37 +13,113 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <table border="1">
             <thead>
                 <tr>
-                    <th>#</th>
-                    <th>họ</th>
-                    <th>tên</th>
-                    <th>Giới tinh</th>
-                    <th>Lương</th>
+                    <td colspan="2">
+                        <form action="schedule">
+                            <input type="submit" value="<----">
+                        </form>
+                    </td> 
+                    <td colspan="4"></td>
+                    <td colspan="2">
+                        <form action="schedule">
+                            <input type="submit" value="---->">
+                        </form>
+                    </td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td>Monday <br> 20/10</td>
+                    <td>Tuesday <br> 21/10</td>
+                    <td>Wednesday <br> 22/10</td>
+                    <td>Thursday <br> 23/10</td>
+                    <td>Friday <br> 24/10</td>
+                    <td>Saturday <br> 25/10</td>
+                    <td>Sunday <br> 26/10</td>
+                    
+                </tr>
+                
             </thead>
-
             <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>Phung Manh</td>
-                    <td>Hung</td>
-                    <td>Nam</td>
-                    <td>$1500</td>
+                    <td>Slot 1</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Vu Thi</td>
-                    <td>Len</td>
-                    <td>Nu</td>
-                    <td>$1600</td>
+                    <td>Slot 2</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Slot 3</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Slot 4</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Slot 5</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Slot 6</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Slot 7</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Slot 8</td>
+                    <<td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
                 </tr>
             </tbody>
-
-            <tfoot>
-                <tr>
-                    <td colspan="4">Tong</td>                   
-                    <td>$1600</td>
-                </tr>
-            </tfoot>
         </table>
     </body>
 </html>
